EZ-1155 exercise page placeholders

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -101,11 +101,11 @@
 </script>
 
 <script id="tm-loading-placeholders" type="text/x-handlebars-template">
-    <div class="collection loading-collection">
-        <div class="loading-item title"></div>
-        <div class="loading-item"></div>
-        <div class="loading-item"></div>
-        <div class="loading-item"></div>
+    <div class="collection loading-collection" style="margin-top: {{marginTopRem}}rem;">
+        <div class="item title" style="width: {{titleWidthRem}}rem;"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
     </div>
 </script>
 
