EZ-1156 exercise summary placeholder

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -101,8 +101,21 @@
 </script>
 
 <script id="tm-loading-placeholders" type="text/x-handlebars-template">
-    <div class="collection loading-collection" style="margin-top: {{marginTopRem}}rem;">
+    <div class="collection loading-collection loading-courses-collection" style="margin-top: {{marginTopRem}}rem;">
         <div class="item title" style="width: {{titleWidthRem}}rem;"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+    </div>
+</script>
+
+<script id="tm-loading-exercise" type="text/x-handlebars-template">
+    <div class="collection loading-collection loading-exercise-collection">
+        <div class="item meta"></div>
+        <div class="item meta"></div>
+        <div class="item meta"></div>
+        <div class="item title"></div>
+        <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
