wui rm placeholder todos from html

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -164,10 +164,7 @@
 </script>
 
 <script id="tm-teach-exercise-all-submissions-placeholder" type="text/x-handlebars-template">
-    <div id="all-submissions-wrap" class="toggleable-wrap all-submissions-wrap">
-        <!-- TODO: placeholder -->
-        {{text}}
-    </div>
+    <div id="all-submissions-wrap" class="toggleable-wrap all-submissions-wrap">{{text}}</div>
 </script>
 
 <script id="tm-teach-exercise-all-submissions" type="text/x-handlebars-template">
@@ -339,9 +336,7 @@
 </script>
 
 <script id="tm-teach-exercise" type="text/x-handlebars-template">
-    <nav id="crumbs" class="crumb-wrap">
-        <!-- TODO: placeholder -->
-    </nav>
+    <nav id="crumbs" class="crumb-wrap"></nav>
     <div id="exercise-card" class="card">
         <div id="tabs-wrap">
             <ul id="tabs" class="tabs">
@@ -352,16 +347,10 @@
             </ul>
         </div>
         <div class="card-content">
-            <div id="exercise">
-                <!-- TODO: placeholder -->
-            </div>
+            <div id="exercise"></div>
             <div id="testing"></div>
-            <div id="students">
-                <!-- TODO: placeholder -->
-            </div>
-            <div id="student">
-                <!-- TODO: placeholder -->
-            </div>
+            <div id="students"></div>
+            <div id="student"></div>
         </div>
     </div>
 </script>
@@ -429,9 +418,7 @@
 </script>
 
 <script id="tm-stud-exercise" type="text/x-handlebars-template">
-    <nav id="crumbs" class="crumb-wrap">
-        <!-- TODO: placeholder -->
-    </nav>
+    <nav id="crumbs" class="crumb-wrap"></nav>
     <div id="exercise-card" class="card">
         <div id="tabs-wrap">
             <ul id="tabs" class="tabs">
@@ -440,12 +427,8 @@
             </ul>
         </div>
         <div class="card-content">
-            <div id="exercise">
-                <!-- TODO: placeholder -->
-            </div>
-            <div id="submit">
-                <!-- TODO: placeholder -->
-            </div>
+            <div id="exercise"></div>
+            <div id="submit"></div>
         </div>
     </div>
 </script>
