--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -88,8 +88,8 @@
 
 <script id="tm-message" type="text/x-handlebars-template">
     <i class="material-icons" style="margin-right: 10px;">{{icon}}</i>
-    <span>{{error}}</span>
-    <button id="{{btnId}}" class="btn-flat toast-action">{{dismiss}}</button>
+    <span>{{msg}}</span>
+    <button id="{{btnId}}" class="btn-flat toast-action"><i class="material-icons dismiss">close</i></button>
 </script>
 
 <script id="tm-add-course" type="text/x-handlebars-template">
