EZ-1266 initial fetch error handling framework

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -88,7 +88,7 @@
 
 <script id="tm-message" type="text/x-handlebars-template">
     <i class="material-icons" style="margin-right: 10px;">{{icon}}</i>
-    <span>{{msg}}</span>
+    <span class="msg">{{msg}}</span>
     <button id="{{btnId}}" class="btn-flat toast-action"><i class="material-icons dismiss">close</i></button>
 </script>
 
