--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -64,14 +64,15 @@
     </nav>
     <!-- Profile dropdown menu structure -->
     <ul id="profile-dropdown" class="dropdown-content">
-        <span id="role-wrap"></span>
+        {{#hasRoles}}
+            <div id="active-role-label">{{activeRoleLabel}}</div>
+            {{#roles}}
+                <li><a id="{{linkId}}" href="#!"><i class="material-icons role-radio-icon">{{#active}}radio_button_checked{{/active}}{{^active}}radio_button_unchecked{{/active}}</i>{{name}}</a></li>
+            {{/roles}}
+        {{/hasRoles}}
         <li><a href="{{accountLink}}">{{account}}</a></li>
         <li><a href="{{logoutLink}}">{{logOut}}</a></li>
     </ul>
-</script>
-
-<script id="tm-role-link" type="text/x-handlebars-template">
-    <li><a id="{{changeRoleId}}">{{changeRole}}</a></li>
 </script>
 
 <script id="tm-sidenav" type="text/x-handlebars-template">
