EZ-1268 page not found graphics to dead robot

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -148,6 +148,21 @@
     </div>
 </script>
 
+<script id="tm-broken-page" type="text/x-handlebars-template">
+    <div class="title-wrap no-crumb">
+        <h3 class="title">{{title}}</h3>
+    </div>
+    <div class="missing-content-wrap sad-robot">
+        <div class="antennaball"></div>
+        <div class="antenna"></div>
+        <div class="robot">
+            <div class="dead-eye"></div>
+            <div class="dead-eye"></div>
+        </div>
+        <p class="text">{{msg}}</p>
+    </div>
+</script>
+
 <script id="tm-exercise-auto-feedback" type="text/x-handlebars-template">
     <h4>{{autoLabel}}</h4>
     <pre class="feedback auto-feedback">{{feedback}}</pre>
