EZ-1276 teacher courses page uses components

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -69,6 +69,44 @@
     <a class="collection-item course-item" href="/courses/{{id}}/exercises">{{title}}</a>
 </template>
 
+<template id="t-c-teach-courses-list">
+    <div class="title-wrap no-crumb">
+        <h3 class="title">{{pageTitle}}</h3>
+        {{#canAddCourse}}
+            <a class="waves-effect waves-light btn title-button" href="/courses/new">
+                <i class="material-icons">add</i><span class="text">{{newCourseLabel}}</span></a>
+        {{/canAddCourse}}
+    </div>
+    <div id="courses-list" class="collection divided-collection">
+        {{#courses}}
+            <ez-dst id="{{dstId}}"></ez-dst>
+        {{/courses}}
+    </div>
+    {{^courses}}
+        <div class="missing-content-wrap">
+            <div class="antennaball"></div>
+            <div class="antenna"></div>
+            <div class="robot">
+                <div class="robot-eye"></div>
+                <div class="robot-eye"></div>
+            </div>
+            <p class="text">{{noCoursesLabel}}</p>
+        </div>
+    {{/courses}}
+</template>
+
+<template id="t-c-teach-courses-item">
+    <div class="teacher-course-wrapper">
+        <a class="collection-item course-item row" href="/courses/{{id}}/exercises">
+            <span class="col xs9 s7 m9">{{title}}</span>
+        </a>
+        <a class="btn-flat waves-effect waves-green course-add-students" href="/courses/{{id}}/participants">
+            <i class="material-icons">group</i>
+            <span class="course-student-count">{{count}} {{studentsLabel}}</span>
+        </a>
+    </div>
+</template>
+
 
 
 <!-- Templates -->
@@ -551,40 +589,6 @@
         </a>
         {{/exercises}}
     </div>
-</script>
-
-<script id="tm-teach-course-list" type="text/x-handlebars-template">
-    <div class="title-wrap no-crumb">
-        <h3 class="title">{{title}}</h3>
-        {{#addCourse}}
-        <a class="waves-effect waves-light btn title-button" href="/courses/new">
-            <i class="material-icons">add</i><span class="text">{{newCourse}}</span></a>
-        {{/addCourse}}
-    </div>
-    <div id="courses-list" class="collection divided-collection">
-        {{#courses}}
-        <div class="teacher-course-wrapper">
-            <a class="collection-item course-item row" href="/courses/{{id}}/exercises">
-                <span class="col xs9 s7 m9">{{title}}</span>
-            </a>
-            <a class="btn-flat waves-effect waves-green course-add-students" href="/courses/{{id}}/participants">
-                <i class="material-icons">group</i>
-                <span class="course-student-count">{{count}} {{students}}</span>
-            </a>
-        </div>
-        {{/courses}}
-    </div>
-    {{^courses}}
-    <div class="missing-content-wrap">
-        <div class="antennaball"></div>
-        <div class="antenna"></div>
-        <div class="robot">
-            <div class="robot-eye"></div>
-            <div class="robot-eye"></div>
-        </div>
-        <p class="text">{{noCoursesLabel}}</p>
-    </div>
-    {{/courses}}
 </script>
 
 <script id="tm-teach-participants" type="text/x-handlebars-template">
