--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -778,7 +778,19 @@
     <div class="card">
         <div class="card-content">
             <div class="grades-wrap">
-                <div class="pre-table-wrap"><!-- TODO --></div>
+                <div class="pre-table-wrap">
+                    {{#hasPagination}}
+                        <ez-pagination>
+                            <ez-pageinfo>{{pageStart}} &#8212; {{pageEnd}}{{pageTotalLabel}}{{pageTotal}}</ez-pageinfo>
+                            <ez-pagenav>
+                                <ez-pagebtn class="go-first waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">first_page</i></ez-pagebtn
+                                ><ez-pagebtn class="go-back waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">navigate_before</i></ez-pagebtn
+                                ><ez-pagebtn class="go-forward waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">navigate_next</i></ez-pagebtn
+                                ><ez-pagebtn class="go-last waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">last_page</i></ez-pagebtn>
+                            </ez-pagenav>
+                        </ez-pagination>
+                    {{/hasPagination}}
+                </div>
                 <div class="grade-table-wrap">
                     <table class="colored truncated-ex">
                         <thead><tr>
@@ -799,7 +811,19 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="post-table-wrap"><!-- TODO --></div>
+                <div class="post-table-wrap">
+                    {{#hasPagination}}
+                        <ez-pagination>
+                            <ez-pageinfo>{{pageStart}} &#8212; {{pageEnd}}{{pageTotalLabel}}{{pageTotal}}</ez-pageinfo>
+                            <ez-pagenav>
+                                <ez-pagebtn class="go-first waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">first_page</i></ez-pagebtn
+                                ><ez-pagebtn class="go-back waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">navigate_before</i></ez-pagebtn
+                                ><ez-pagebtn class="go-forward waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">navigate_next</i></ez-pagebtn
+                                ><ez-pagebtn class="go-last waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">last_page</i></ez-pagebtn>
+                            </ez-pagenav>
+                        </ez-pagination>
+                    {{/hasPagination}}
+                </div>
             </div>
         </div>
     </div>
