EZ-1282 download latest submissions button

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -454,6 +454,7 @@
 
 <script id="tm-teach-exercise-students" type="text/x-handlebars-template">
     <div id="students-frame"></div>
+    <button id="export-submissions-button" class="waves-effect waves-light btn">{{exportSubmissionsLabel}}</button>
     <div id="students-list"></div>
 </script>
 
